# llama-cpp-rs

./: .gitignore  Cargo.toml
examples/chat_parser/: Cargo.toml  README.md
examples/chat_parser/src/: chat_parser.rs
examples/chat_parser/src/tools/: weather.rs
llama-cpp-2/src/: auto_parser.bak  auto_parser.rs  chat_parser.rs  context.rs  lib.rs  model.rs  mtmd.rs  speculative.rs
llama-cpp-2/src/model/: params.rs
llama-cpp-sys-2/: build.rs  wrapper_auto-parser.h  wrapper_chat-parser.h  wrapper_common.cpp  wrapper_common.h  wrapper_utils.h
