[package]
name = "chat-parser"
version = "0.1.86"
edition = "2021"
publish = false

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.152", features = [
    "mtmd",
    "metal",
] }
clap = { workspace = true, features = ["derive"] }
encoding_rs = { workspace = true }

[dev-dependencies]
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"


[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
mkl = ["llama-cpp-2/mkl"]

[lints]
workspace = true

[[example]]
name = "chat-parser"
path = "src/chat_parser.rs"
